[workspace]
members = ["clash", "clash-lib", "clash-server"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
bfbb = "0.2.1"
clash_lib = { path = "clash-lib" }
env_logger = "0.9"
log = "0.4"
thiserror = "1"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "io-util",
    "net",
    "macros",
    "sync",
    "time",
] }

# Remove unneeded debug info from linux release binaries
[profile.release]
strip = true

# Optimize our dependencies for better performance when debugging
[profile.dev.package."*"]
opt-level = 3

# Optimize CI for build-times
[profile.ci]
inherits = "dev"
debug = 0

[profile.ci.package."*"]
opt-level = 0
