[workspace]
members = [
    "crates/clash",
    "crates/clash-lib",
    "crates/clash-server",
    "crates/version-gen",
]

[workspace.package]
version = "0.2.0-rc.2"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
bfbb = "0.3.0-beta.1"
clash_lib = { path = "crates/clash-lib" }
futures = { version = "0.3.25", default-features = false }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "io-util",
    "net",
    "macros",
    "sync",
    "time",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
version_gen = { path = "crates/version-gen" }

# These versions for egui crates always need to match 
eframe = "0.20"
ecolor = { version = "0.20", features = ["serde"] }

# Remove unneeded debug info from linux release binaries
[profile.release]
strip = true

# Optimize our dependencies for better performance when debugging
[profile.dev.package."*"]
opt-level = 3

# Optimize CI for build-times
[profile.ci]
inherits = "dev"
debug = 0

[profile.ci.package."*"]
opt-level = 0
