[package]
name = "clash"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
consolidate-commits = true
publish = false
shared-version = true
tag-prefix = ""

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "net", "macros"] }
serde = { version = "1", features = ["derive"] }
bytes = "1.1"
bincode = "1.3"
strum = "0.23"
strum_macros = "0.23"
egui = "0.17"

thiserror = "1"
anyhow = "1"

log = "0.4"
