[package]
name = "clash"
version.workspace = true
edition.workspace = true
publish = false

[features]
console = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bfbb = { version = "0.2.1", features = ["game-interface"] }
clash_lib.workspace = true
env_logger.workspace = true
log.workspace = true
thiserror.workspace = true
tokio.workspace = true

eframe = "0.19"
image = "0.24"
spin_sleep = "1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
