[package]
name = "client"
version = "0.1.0"
edition = "2021"

[features]
console = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clash = { path = ".." }
bfbb = { version = "0.1", features = ["game-interface"]}

thiserror = "1"
anyhow = "1"

log = "0.4"
env_logger = "0.9"

eframe = "0.19"
image = "0.24"
spin_sleep = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "net", "macros", "sync"] }

#Memory Shenanigans
process-memory = "0.4" # For reading external process memory
proc-maps = "0.2" # For querying memory maps
sysinfo = "0.25" # For getting PID by name

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"