[package]
name = "server"
version.workspace = true
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bfbb.workspace = true
clash_lib.workspace = true
tokio.workspace = true
thiserror.workspace = true
env_logger.workspace = true
log.workspace = true

rand = "0.8"
