[package]
name = "clash_lib"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
bfbb = { workspace = true, features = ["serde"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

bincode = "1"
bytes = "1"
epaint = "0.19"
serde = { version = "1", features = ["derive"] }
