[package]
name = "clash_lib"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
bfbb = { workspace = true, features = ["serde"] }
ecolor.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

bincode = "1"
bytes = "1"
