[package]
name = "clash"
version.workspace = true
edition.workspace = true
publish = false

[features]
console = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bfbb = { workspace = true, features = ["game-interface"] }
clash_lib.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

eframe = "0.19"
image = "0.24"
itertools = "0.10.5"
spin_sleep = "1"

[build-dependencies]
anyhow.workspace = true
version_gen.workspace = true

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
