[package]
name = "clash"
version.workspace = true
edition.workspace = true
publish = false

[features]
console = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bfbb = { workspace = true, features = ["game-interface"] }
clash_lib.workspace = true
eframe.workspace = true
futures.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

image = "0.24"
itertools = "0.10.5"
once_cell = "1.16.0"
reqwest = { version = "0.11.13", features = ["json"] }
semver = { version = "1.0.16", features = ["serde"] }
spin_sleep = "1"
poll-promise = { version = "0.2.0", features = ["tokio"] }

[build-dependencies]
anyhow.workspace = true
version_gen.workspace = true

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
